--- a/MuTTY.csproj
+++ b/MuTTY.csproj
@@ -70,6 +70,13 @@
     <Compile Include="Job.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionGroup.cs" />
+    <Compile Include="SessionGroupOptionsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SessionGroupOptionsDialog.Designer.cs">
+      <DependentUpon>SessionGroupOptionsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="SessionInfo.cs" />
     <Compile Include="SessionOptionsDialog.cs">
       <SubType>Form</SubType>
@@ -106,6 +113,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SessionGroupOptionsDialog.resx">
+      <DependentUpon>SessionGroupOptionsDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SessionOptionsDialog.resx">
       <DependentUpon>SessionOptionsDialog.cs</DependentUpon>
     </EmbeddedResource>
